--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                         <h1 class="brand-heading"><br>AdhanAlert<br><br></h1>
                         <p class="intro-text">Find the salah times in your city below!</p>
                         <a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
+                        <Style>
+                            .intro-text {
+                                     text-shadow:
+                                     1px 1px 2px black,
+                                     0 0 1em rgb(0, 0, 0),
+                                     0 0 0.2em rgb(0, 0, 0);
+                                    }
+                        </Style>
                     </div>
                 </div>
             </div>
