--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <p>Asr: ${timings.Asr}</p>
                     <p>Maghrib: ${timings.Maghrib}</p>
                     <p>Isha: ${timings.Isha}</p>
-                    <p>Isha Prime: ${ishaPrimeFormatted}</p>
+                    <p>Prime Isha: ${ishaPrimeFormatted}</p>
                 `;
             }
 
